--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,11 @@ letter-spacing: 0.5rem;
     margin-top: 0.5rem;
 }
 
+.title-anchor{
+  cursor: default !important;
+  text-decoration: none !important;
+}
+
 .description{
   font-size: clamp(2.3rem, 4.5vw, 4.5vw);
   font-weight: bold;
