--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,12 @@ letter-spacing: 0.5rem;
   .scrollRightToLeft {
     animation: scrollRightToLeft 300s infinite linear;
   }
+
+    .countdown {
+        font-size: 2rem;
+        font-weight: 600;
+        letter-spacing: 0.1em;
+    }
   
   @keyframes  scrollRightToLeft {
     from {
