Change font size of launch link to responsive calculation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ letter-spacing: 0.5rem;
    }
 
    #launch-link {
-    font-size: 8rem;
+    font-size: calc(70vw / 4);
     border-radius: 4rem; 
    }
   
